--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,17 +1,6 @@
-<label for="email">email</label>
-<input type="text" name="email" id="email" class="fancy_form" >
+<%profile = ["email", "username", "pin", "website", "address"]%>
 
-<label for="username">username</label>
-<input type="text" name="username" id="username" class="fancy_form" >
-
-<label for="pin">pin</label>
-<input type="text" name="pin" id="pin" class="fancy_form"
-
-<label for="website">website</label>
-<input type="text" name="website" id="website" class="fancy_form" >
-
-<label for="address">address</label>
-<input type="text" name="address" id="address" class="fancy_form" >
-
-<label for="alias">alias</label>
-<input type="text" name="alias" id="alias" class="fancy_form" >
+<%profile.each do |v|%>
+  <label for="<%=v%>"><%=v%></label>
+  <input type="text" name="<%=v%>" id ="<%=v%>" class="fancy_form">
+<%end%>
